spring batch + rest service file uploader

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,6 +24,9 @@ spring:
             enabled: false
     thymeleaf:
         mode: XHTML
+    batch:
+        job:
+            enabled: false
 
 security:
     basic:
