--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "ZDPortal",
+    "name": "StackPortal",
     "version": "0.0.0",
     "appPath": "src/main/webapp",
     "testPath": "src/test/javascript/spec",
