--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "z-d-portal",
   "version": "0.0.0",
-  "description": "Description for ZDPortal",
+  "description": "Description for StackPortal",
   "private": true,
   "dependencies": {
   },
