--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -15,7 +15,7 @@ spring:
         active: prod
     datasource:
         driver-class-name: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-        url: jdbc:mysql://localhost:3306/ZDPortal?useUnicode=true&characterEncoding=utf8
+        url: jdbc:mysql://localhost:3306/StackPortal?useUnicode=true&characterEncoding=utf8
         name: 
         username: root
         password:
@@ -54,4 +54,4 @@ jhipster:
             enabled: false
             host: localhost
             port: 2003
-            prefix: ZDPortal
+            prefix: StackPortal
