--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -19,7 +19,7 @@
 spring:
     datasource:
         driver-class-name: org.h2.jdbcx.JdbcDataSource
-        url: jdbc:h2:mem:ZDPortal;DB_CLOSE_DELAY=-1
+        url: jdbc:h2:mem:StackPortal;DB_CLOSE_DELAY=-1
         name:
         username:
         password:
@@ -70,7 +70,7 @@ jhipster:
         protocol: smtp
         tls: false
         auth: false
-        from: ZDPortal@localhost
+        from: StackPortal@localhost
     security:
         rememberme:
             # security key (this key should be unique for your application, and kept secret)
@@ -78,8 +78,8 @@ jhipster:
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx.enabled: true
     swagger:
-        title: ZDPortal API
-        description: ZDPortal API documentation
+        title: StackPortal API
+        description: StackPortal API documentation
         version: 0.0.1
         termsOfServiceUrl:
         contact:
